--- a/package.json
+++ b/package.json
@@ -10,9 +10,15 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/recharts": "^1.8.3",
+    "lodash-es": "^4.17.15",
+    "moment": "^2.24.0",
+    "papaparse": "^5.1.0",
+    "prettier": "^1.19.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.0",
+    "recharts": "1.8.5",
     "typescript": "~3.7.2"
   },
   "scripts": {
@@ -35,5 +41,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "prettier": {
+    "singleQuote": true,
+    "useTabs": false
   }
 }
