--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/papaparse": "^5.0.3",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/react-widgets": "^4.4.0",
     "@types/recharts": "^1.8.3",
     "lodash-es": "^4.17.15",
     "moment": "^2.24.0",
@@ -20,6 +21,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.0",
+    "react-widgets": "^4.4.11",
     "recharts": "1.8.5",
     "typescript": "~3.7.2"
   },
