Test data transformations

--- a/package.json
+++ b/package.json
@@ -49,5 +49,10 @@
   "prettier": {
     "singleQuote": true,
     "useTabs": false
+  },
+  "jest": {
+    "transformIgnorePatterns": [
+      "<rootDir>/node_modules/(?!lodash-es)"
+    ]
   }
 }
